Quorum3/Library/Tests/TypeChecker/Pass/ImpAssignObjectBoolObjField.quorum
class Main
    Boolean v
    action Main
        v:SetValue(true)
        Test(v)
    end

    action Test(Object var)
        Boolean value = cast(Boolean, var)
        if value:GetValue() = true
            output "passed"
        end
    end
end
