Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignTextObjBoolObj.quorum
class main
    action Main
        Boolean b
        Text txt
        b:SetValue(true)
        txt = cast(Text, b)
    end
end